updated grass for hot climates

--- a/lawn-basics/best-grass-types-for-hot-dry-climates.html
+++ b/lawn-basics/best-grass-types-for-hot-dry-climates.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Best Grass Types for Hot Dry Climates</title>
-  <meta name="description" content="Hot, dry climates can ruin the wrong lawn. Some grass types handle heat, sun, and low water far better than others year after year.">
+  <meta name="description" content="Hot, dry climates demand the right grass. Some lawns hold color and coverage with less water while others fail quickly in heat.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/best-grass-types-for-hot-dry-climates.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,17 +14,15 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Best Grass Types for Hot Dry Climates">
-  <meta name="twitter:description" content="Hot, dry climates can ruin the wrong lawn. Some grass types handle heat, sun, and low water far better than others year after year.">
+  <meta name="twitter:description" content="Hot, dry climates demand the right grass. Some lawns hold color and coverage with less water while others fail quickly in heat.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Open Graph -->
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Best Grass Types for Hot Dry Climates">
-  <meta property="og:description" content="Hot, dry climates can ruin the wrong lawn. Some grass types handle heat, sun, and low water far better than others year after year.">
+  <meta property="og:description" content="Hot, dry climates demand the right grass. Some lawns hold color and coverage with less water while others fail quickly in heat.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/best-grass-types-for-hot-dry-climates.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
@@ -47,46 +45,34 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        spellcheck="false"
-      >
-      <div id="searchResults" class="search-results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>Best Grass Types for Hot Dry Climates</h1>
 
-<h2>Why hot, dry weather exposes weak lawns</h2>
-<p>Heat and low rainfall quickly show which lawns are built to last. Some grasses thin out, turn brown, or stop growing once summer settles in. Choosing the right grass makes a huge difference in how the yard holds up.</p>
-<p>A grass that fits dry conditions usually stays thicker with less water. It also avoids the constant cycle of patching and reseeding. That makes summer far easier to manage.</p>
+<h2>Why heat and drought expose weak lawns</h2>
+<p>Hot, dry weather quickly separates durable lawns from struggling ones. Some grass thins out, turns dull, or stops filling in once summer sets in. These problems are not random and usually repeat every year.</p>
+<p>A lawn that is not suited for heat demands constant attention just to look acceptable. Matching the grass to the climate removes that ongoing fight.</p>
 
-<h2>Grass that holds up under sun and drought</h2>
-<p>The best grasses for hot climates are the ones that stay steady during long dry stretches. They don’t fall apart when watering is reduced or when temperatures stay high. This keeps the yard from looking burnt out.</p>
-<p>Lawns that are not suited for heat often fail first in stressed areas. Shaded zones near large plants can also struggle even when the rest of the yard looks fine. <a href="why-grass-near-trees-struggles.html">Why Grass Near Trees Struggles</a> explains why those spots are harder to keep healthy.</p>
+<h2>Grass that stays together with less water</h2>
+<p>The best grasses for dry climates hold their shape even when watering is limited. They stay more even across the yard instead of breaking into bare patches. This makes the lawn easier to manage during long dry stretches.</p>
+<p>Lawns that lack this tolerance often decline unevenly. Thin areas expand slowly until the yard looks worn out.</p>
 
-<h2>How extreme heat affects lawn appearance</h2>
-<p>During extreme heat, some lawns keep their shape while others collapse fast. The right grass type stays more even and avoids sudden bare patches. This helps the yard keep a cleaner look through summer.</p>
-<p>When grass is a poor match, heat damage shows quickly and can linger. Recovery often takes weeks or longer once temperatures cool. <a href="can-grass-survive-extreme-heat.html">Can Grass Survive Extreme Heat</a> covers what usually happens during long heat waves.</p>
+<h2>Why some shaded areas still struggle</h2>
+<p>Shade does not always protect grass from heat problems. Areas near large plants often thin out even when nearby turf looks fine. Competition and limited space make those zones harder to maintain.</p>
+<p>This uneven performance leads many homeowners to chase watering fixes that do not work. <a href="why-grass-near-trees-struggles.html">Why Grass Near Trees Struggles</a> explains why those spots fail despite shade.</p>
 
-<h2>Foot traffic and wear during hot months</h2>
-<p>Summer lawns still deal with foot traffic, pets, and regular use. Grasses suited for dry heat tend to handle this wear better. They stay intact instead of thinning out under pressure.</p>
-<p>Weak grasses show damage faster in hot weather. Busy areas turn thin because they never get a break from stress. A heat-tolerant lawn holds together longer.</p>
+<h2>What extreme heat does to lawn appearance</h2>
+<p>During extreme heat, the wrong grass type breaks down quickly. Color fades, growth stalls, and the lawn loses its uniform look. Recovery can take a long time once conditions improve.</p>
+<p>Heat-tolerant lawns respond differently. They may slow down, but they hold coverage and recover faster. <a href="can-grass-survive-extreme-heat.html">Can Grass Survive Extreme Heat</a> outlines what separates survival from collapse.</p>
 
-<h2>Maintenance habits that matter in dry climates</h2>
-<p>Mowing and upkeep matter more when water is limited. Cutting too short or using equipment carelessly can make heat damage worse. Simple habits help protect the lawn.</p>
-<p>Safe mowing and basic tool awareness prevent extra stress. Accidents and damage often come from rushed work. <a href="tools-safety/common-lawn-tool-safety-hazards.html">Common Lawn Tool Safety Hazards</a> highlights mistakes that can harm both the yard and the person maintaining it.</p>
+<h2>Wear, mowing, and summer stress</h2>
+<p>Summer lawns still face foot traffic, pets, and regular mowing. Heat makes every mistake more visible. Cutting too low or damaging turf during maintenance compounds stress.</p>
+<p>Safe and controlled work prevents avoidable setbacks. <a href="tools-safety/common-lawn-tool-safety-hazards.html">Common Lawn Tool Safety Hazards</a> highlights mistakes that often harm lawns during hot weather.</p>
 
 <h2>Choosing grass for long-term success</h2>
-<p>The best grass for hot, dry climates is one that stays reliable year after year. It doesn’t demand constant watering or repairs just to survive. The lawn looks more stable with less effort.</p>
-<p>Heat and drought are unavoidable in some regions. A grass that fits those conditions reduces frustration and keeps the yard usable. That long-term consistency is what makes the right choice worthwhile.</p>
+<p>The best grass for hot, dry climates is one that stays reliable year after year. It does not need constant rescue to survive summer. The lawn remains usable instead of fragile.</p>
+<p>Heat and drought are part of the environment, not problems to eliminate. Choosing grass that fits those conditions keeps the yard steady with far less effort.</p>
   </main>
 
   <footer class="site-footer">
