--- a/lawn-basics/can-grass-recover-after-being-scalped.html
+++ b/lawn-basics/can-grass-recover-after-being-scalped.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Can Grass Recover After Being Scalped</title>
-  <meta name="description" content="Scalping a lawn looks severe, but recovery is sometimes possible. Learn when grass will return and when replacement is the better move.">
+  <meta name="description" content="Scalping a lawn looks severe, but recovery is sometimes possible. The outcome depends on timing, severity, and overall lawn condition.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Can Grass Recover After Being Scalped">
-  <meta name="twitter:description" content="Scalping a lawn looks severe, but recovery is sometimes possible. Learn when grass will return and when replacement is the better move.">
+  <meta name="twitter:description" content="Scalping a lawn looks severe, but recovery is sometimes possible. The outcome depends on timing, severity, and overall lawn condition.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
   <meta property="og:image:width" content="1200">
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Can Grass Recover After Being Scalped">
-  <meta property="og:description" content="Scalping a lawn looks severe, but recovery is sometimes possible. Learn when grass will return and when replacement is the better move.">
+  <meta property="og:description" content="Scalping a lawn looks severe, but recovery is sometimes possible. The outcome depends on timing, severity, and overall lawn condition.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
@@ -50,29 +50,29 @@
   <main class="container">
     <h1>Can Grass Recover After Being Scalped</h1>
 
-<h2>What scalping does to a lawn right away</h2>
-<p>Scalping happens when grass is cut far lower than it should be, exposing bare soil and leaving the yard looking damaged. The lawn usually turns pale or brown almost immediately, which alarms most homeowners. This sudden change makes it hard to tell whether the damage is temporary or serious.</p>
-<p>The key point is that appearance alone does not decide the outcome. Some lawns rebound while others continue to decline. What matters is how deeply the cut affected the lawn’s ability to regrow, so the takeaway is to pause and observe before taking action.</p>
+<h2>What scalping looks like and why it happens</h2>
+<p>Scalping happens when grass is cut far lower than usual, often exposing soil and leaving the lawn looking scraped and uneven. This usually occurs after skipping a few mows and then cutting too much at once. Slopes, dull blades, and uneven ground make the problem worse.</p>
+<p>The damage is immediate and obvious, which often leads homeowners to assume the lawn is ruined. In reality, appearance alone does not determine the outcome.</p>
 
-<h2>When recovery is still possible</h2>
-<p>Recovery is most likely when the lawn was thick and healthy before the scalping happened. In those cases, new growth usually starts showing within a few weeks, even if it looks uneven at first. Patience is required because early regrowth rarely looks smooth.</p>
-<p>This means a one-time mistake does not automatically ruin a lawn. If new green growth appears and spreads, recovery is underway. The takeaway is to give the lawn time before deciding it has failed.</p>
+<h2>When grass can still bounce back</h2>
+<p>Lawns that were thick and healthy before scalping often recover with time. New growth usually shows up within a few weeks, even if it starts uneven. The lawn may look rough during this period, but improvement is measurable.</p>
+<p>Single-event scalping during active growing seasons is far less damaging than repeated low cuts. Patience matters more than quick fixes at this stage.</p>
 
-<h2>Signs the lawn is failing instead of rebounding</h2>
-<p>When large bare areas stay unchanged for weeks, recovery is unlikely. Grass that fails to return in those spots usually continues thinning instead of filling in. This pattern signals deeper damage rather than slow regrowth.</p>
-<p>At that point, repairs often become temporary fixes that do not last. Repeated patching leads to frustration and uneven results. <a href="signs-a-lawn-needs-to-be-replaced.html">Signs a Lawn Needs to Be Replaced</a> outlines when replacement is the smarter choice, so the takeaway is to recognize when recovery has stalled.</p>
+<h2>Warning signs that recovery is failing</h2>
+<p>If large bare areas remain unchanged after several weeks, recovery is unlikely. Grass that does not return in those spots usually continues thinning rather than spreading. This pattern becomes clearer with time.</p>
+<p>At that point, repairs often turn temporary and frustrating. <a href="signs-a-lawn-needs-to-be-replaced.html">Signs a Lawn Needs to Be Replaced</a> helps identify when replacement is the more practical option.</p>
 
-<h2>Uneven regrowth and clumping</h2>
-<p>Scalped lawns that do recover often come back unevenly. Some areas grow quickly while others lag behind, creating a clumpy or rough appearance. This makes the yard look patchy even when growth has resumed.</p>
-<p>This uneven pattern usually improves slowly with consistent mowing and care. It is not a sign of failure, just an adjustment period. <a href="why-grass-grows-in-clumps.html">Why Grass Grows in Clumps</a> explains this behavior, so the takeaway is not to panic when regrowth looks uneven.</p>
+<h2>Why regrowth often looks uneven or clumpy</h2>
+<p>Scalped lawns that recover rarely grow back evenly at first. Some areas respond faster, creating patches and clumps that stand out. This uneven look can be misleading.</p>
+<p>Over time, consistent mowing smooths these differences. <a href="why-grass-grows-in-clumps.html">Why Grass Grows in Clumps</a> explains why uneven growth is common after damage.</p>
 
-<h2>How additional stress affects recovery</h2>
-<p>After scalping, the lawn has little room for error. Heavy foot traffic, extreme heat, or skipped watering can stop recovery altogether. Damage adds up quickly during this vulnerable phase.</p>
-<p>Lawns that face repeated stress often slide backward instead of improving. <a href="how-grass-responds-to-stress.html">How Grass Responds to Stress</a> helps explain these setbacks. The takeaway is to reduce pressure on the lawn until growth clearly stabilizes.</p>
+<h2>How added stress changes the outcome</h2>
+<p>After scalping, the lawn has little tolerance for extra strain. Heat, traffic, and missed watering can stop recovery entirely. Damage compounds quickly during this phase.</p>
+<p>Reducing pressure improves the odds of rebound. <a href="how-grass-responds-to-stress.html">How Grass Responds to Stress</a> shows how lawns behave when pushed too hard.</p>
 
-<h2>Deciding what to do next</h2>
-<p>Some lawns recover fully with time and careful mowing. Others show minimal improvement despite weeks of waiting. Watching the trend matters more than hoping for a sudden turnaround.</p>
-<p>If progress remains poor, continuing to wait wastes time and effort. Replacement or major renovation may be the better move. The takeaway is to make a clear decision based on results, not wishful thinking.</p>
+<h2>Deciding whether to wait or start over</h2>
+<p>Some lawns recover fully with steady care and higher mowing. Others show minimal improvement despite weeks of waiting. Tracking progress matters more than hoping.</p>
+<p>If recovery stalls, replacement often saves time and effort in the long run. Making a clear decision prevents ongoing patchwork and frustration.</p>
   </main>
 
   <footer class="site-footer">
