fixed grass growing seasons

--- a/lawn-basics/how-fast-grass-grows-by-season.html
+++ b/lawn-basics/how-fast-grass-grows-by-season.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Fast Grass Grows by Season</title>
-  <meta name="description" content="Grass growth speed changes by season as temperature, daylight, and respiration alter the balance between photosynthesis and carbohydrate use.">
+  <meta name="description" content="Grass does not grow at the same speed all year. Seasonal changes explain why mowing needs shift and lawns behave differently.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-fast-grass-grows-by-season.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="How Fast Grass Grows by Season">
-  <meta property="og:description" content="Grass growth speed changes by season as temperature, daylight, and respiration alter the balance between photosynthesis and carbohydrate use.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-fast-grass-grows-by-season.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="How Fast Grass Grows by Season">
+  <meta name="twitter:description" content="Grass does not grow at the same speed all year. Seasonal changes explain why mowing needs shift and lawns behave differently.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="How Fast Grass Grows by Season">
+  <meta property="og:description" content="Grass does not grow at the same speed all year. Seasonal changes explain why mowing needs shift and lawns behave differently.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-fast-grass-grows-by-season.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,63 +45,38 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>How Fast Grass Grows by Season</h1>
 
-<h2>Growth rate as an energy balance</h2>
-<p>Grass growth occurs only when carbohydrate production exceeds carbohydrate consumption. Photosynthesis supplies energy, while respiration consumes it to maintain existing tissue. Net growth depends on the difference between these two processes.</p>
-<p>Seasonal changes alter this balance by shifting temperature, light duration, and moisture availability. Growth speed therefore varies predictably throughout the year.</p>
+<h2>Why grass never grows at the same speed all year</h2>
+<p>Grass growth changes throughout the year, even when the lawn looks healthy. Some months require frequent mowing, while others barely need attention. These shifts are normal and follow a seasonal pattern.</p>
+<p>Expecting steady growth year-round leads to confusion. Growth speed moves with the calendar, not the mower schedule.</p>
 
-<h2>Spring growth acceleration</h2>
-<p>In spring, moderate temperatures improve photosynthetic efficiency while keeping respiration relatively low. Enzymatic activity favors carbohydrate accumulation rather than rapid consumption.</p>
-<p>Soil moisture is often higher, improving nutrient transport and root activity. Together, these conditions produce rapid leaf expansion and visible growth.</p>
+<h2>Fast growth during peak growing months</h2>
+<p>Spring and early summer are when most lawns grow the fastest. Mowing often needs to happen more frequently just to keep the yard even. Skipped cuts show up quickly during this period.</p>
+<p>Different grass types peak at different times. <a href="warm-season-vs-cool-season-grasses-explained.html">Warm Season vs Cool Season Grasses Explained</a> helps clarify why growth surges earlier in some lawns than others.</p>
 
-<h2>Summer stress and slowdown</h2>
-<p>As temperatures rise, respiration rates increase. Energy consumption accelerates even as photosynthesis becomes less efficient due to heat stress.</p>
-<p>For cool-season grasses, this shift often reduces net growth to near zero. Leaf production slows, and carbohydrate reserves are conserved rather than expanded.</p>
+<h2>Slower growth during heat or dry periods</h2>
+<p>As temperatures rise or rain drops off, grass growth slows noticeably. The lawn may look unchanged for days at a time. Mowing schedules usually stretch out during these conditions.</p>
+<p>This slowdown is expected and does not mean the lawn is failing. Reduced growth is part of how grass handles tougher weather.</p>
 
-<h2>Warm-season summer adaptation</h2>
-<p>Warm-season grasses evolved photosynthetic enzymes optimized for higher temperatures. Their respiration-to-photosynthesis balance remains favorable during heat.</p>
-<p>This allows continued carbohydrate production and active growth during periods when cool-season grasses stall.</p>
+<h2>Why nearby lawns grow at different rates</h2>
+<p>Two lawns on the same street can grow at very different speeds. Sun exposure, watering habits, and yard layout all influence how fast grass fills in. Small differences add up over time.</p>
+<p>This explains why one yard needs mowing while another does not. <a href="why-lawns-look-different-yard-to-yard.html">Why Lawns Look Different Yard to Yard</a> explains these contrasts.</p>
 
-<h2>Fall regrowth dynamics</h2>
-<p>Cooling temperatures reduce respiration demand while maintaining adequate photosynthetic capacity.</p>
-<p>Grass resumes growth and reallocates carbohydrates to both leaf tissue and root storage in preparation for dormancy.</p>
+<h2>Minimal growth during cold or dormant seasons</h2>
+<p>In colder months, grass growth slows to almost nothing. The lawn holds its height for long stretches without change. Mowing becomes unnecessary.</p>
+<p>This pause is normal and temporary. Grass resumes growth when conditions improve.</p>
 
-<h2>Winter dormancy and metabolic suppression</h2>
-<p>Low temperatures slow enzymatic reactions that drive both photosynthesis and growth.</p>
-<p>Respiration continues at a minimal level, but carbohydrate production is insufficient to support expansion.</p>
-<p>Growth pauses as the plant prioritizes survival.</p>
+<h2>How neglect changes seasonal growth patterns</h2>
+<p>Lawns that are skipped or inconsistently maintained stop following clean seasonal rhythms. Growth becomes uneven and recovery takes longer when care resumes. The lawn appears unpredictable.</p>
+<p>Over time, neglect reshapes how the lawn responds across seasons. <a href="can-grass-adapt-to-neglect.html">Can Grass Adapt to Neglect</a> explains what usually happens.</p>
 
-<h2>Daylength and hormonal regulation</h2>
-<p>Changing photoperiod influences growth hormones that regulate cell division.</p>
-<p>Shorter days reinforce temperature-driven growth slowdown, even before severe cold occurs.</p>
-
-<h2>Why growth varies within the same season</h2>
-<p>Weather variability alters the photosynthesis–respiration balance.</p>
-<p>Short-term heat waves or cool periods temporarily change growth speed, but sustained trends dominate overall behavior.</p>
-
-<h2>Conclusion</h2>
-<p>Seasonal growth speed reflects shifting internal energy economics. Understanding these shifts explains why grass grows rapidly at some times and appears static at others.</p>
+<h2>What growth speed says about the lawn overall</h2>
+<p>Fast growth does not automatically mean a better lawn, and slow growth does not always signal trouble. Growth rate reflects conditions rather than quality by itself. Context matters.</p>
+<p>Understanding seasonal growth helps set realistic expectations. <a href="how-deep-grass-roots-really-go.html">How Deep Grass Roots Really Go</a> adds perspective on what growth above ground does and does not show.</p>
   </main>
 
   <footer class="site-footer">
@@ -104,12 +84,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
