--- a/lawn-basics/how-grass-actually-grows.html
+++ b/lawn-basics/how-grass-actually-grows.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Grass Actually Grows</title>
-  <meta name="description" content="How grass grows from the crown and roots, how leaves regenerate after mowing, and why growth speed depends on temperature, water, and stress.">
+  <meta name="description" content="Grass growth follows a steady pattern, not sudden spurts. Understanding how it fills in helps set realistic mowing and care habits.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-grass-actually-grows.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="How Grass Actually Grows">
-  <meta property="og:description" content="How grass grows from the crown and roots, how leaves regenerate after mowing, and why growth speed depends on temperature, water, and stress.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-grass-actually-grows.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="How Grass Actually Grows">
+  <meta name="twitter:description" content="Grass growth follows a steady pattern, not sudden spurts. Understanding how it fills in helps set realistic mowing and care habits.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="How Grass Actually Grows">
+  <meta property="og:description" content="Grass growth follows a steady pattern, not sudden spurts. Understanding how it fills in helps set realistic mowing and care habits.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-grass-actually-grows.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,72 +45,30 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>How Grass Actually Grows</h1>
 
-<h2>Grass is not a single stem plant</h2>
-<p>Grass grows from a crown at soil level, not from the leaf tips.</p>
-<p>The visible blades are disposable growth, replaced over and over during the season.</p>
-<p>This structure is why grass survives mowing while many plants cannot.</p>
+<h2>Grass grows steadily, not in sudden jumps</h2>
+<p>Grass does not grow in bursts or overnight leaps. It fills in little by little each day when conditions allow. This slow pace is easy to miss until several days pass.</p>
+<p>Expecting dramatic daily change leads to false assumptions about lawn health. Growth is gradual, and patience matters.</p>
 
-<h2>The crown is the control center</h2>
-<p>The crown connects leaves, roots, and growing points.</p>
-<p>Damage to leaf tips slows growth. Damage to the crown can kill the plant.</p>
-<p>Scalping exposes the crown to heat and stress, which is why recovery slows.</p>
+<h2>Growth happens from the base, not the tip</h2>
+<p>Grass keeps growing even after it is cut because new length comes from lower down. Cutting the top removes height but does not stop growth. This is why lawns recover after mowing.</p>
+<p>How much is removed at once affects how smooth recovery looks. <a href="how-short-is-too-short-to-cut-grass.html">How Short Is Too Short to Cut Grass</a> explains where problems begin.</p>
 
-<h2>Roots support growth but do not drive it</h2>
-<p>Roots absorb water and nutrients and anchor the plant.</p>
-<p>Leaf growth happens above ground, powered by photosynthesis.</p>
-<p>Weak roots limit growth indirectly by restricting water and nutrient flow.</p>
+<h2>Grass spreads to fill space over time</h2>
+<p>Grass slowly expands to cover open areas when conditions allow. Bare spots usually fill in from the edges instead of popping up overnight. This process takes time.</p>
+<p>Hard surfaces interrupt that spread completely. <a href="can-grass-grow-through-rocks-or-gravel.html">Can Grass Grow Through Rocks or Gravel</a> explains why some areas stay bare.</p>
 
-<h2>How new leaves form</h2>
-<p>New leaves emerge from the base of the plant.</p>
-<p>Older leaves age, lose efficiency, and are replaced.</p>
-<p>Mowing removes older leaf tissue, not the growing point, when done correctly.</p>
+<h2>Growth speed changes with the season</h2>
+<p>Grass grows faster during some parts of the year and slower during others. These changes are predictable and repeat every season. Mowing needs follow that pattern.</p>
+<p>Understanding these cycles prevents overreaction. <a href="how-fast-grass-grows-by-season.html">How Fast Grass Grows by Season</a> shows what to expect month to month.</p>
 
-<h2>Temperature controls growth speed</h2>
-<p>Grass growth responds to temperature ranges, not calendar dates.</p>
-<p>Warm-season grass accelerates in heat. Cool-season grass accelerates in mild conditions.</p>
-<p>Outside those ranges, growth slows regardless of water or fertilizer.</p>
-
-<h2>Water enables growth but does not force it</h2>
-<p>Water allows cell expansion and nutrient movement.</p>
-<p>Extra water cannot force growth when temperature is wrong.</p>
-<p>Overwatering often reduces oxygen in soil and weakens roots.</p>
-
-<h2>Why mowing changes growth behavior</h2>
-<p>Mowing shifts energy toward leaf replacement.</p>
-<p>Frequent light cuts maintain balance between roots and leaves.</p>
-<p>Infrequent heavy cuts shock the system and slow recovery.</p>
-
-<h2>Stress interrupts the growth cycle</h2>
-<p>Heat, drought, cold, compaction, and shade all reduce photosynthesis.</p>
-<p>When energy drops, growth pauses before death occurs.</p>
-<p>Dormancy is a survival response, not immediate failure.</p>
-
-<h2>What this means for lawn care</h2>
-<p>Healthy growth depends on protecting the crown.</p>
-<p>Care timing should follow active growth periods.</p>
-<p>Most lawn problems start when growth biology is ignored.</p>
+<h2>What steady growth means for lawn care</h2>
+<p>Because growth is gradual, lawn care works best when it is consistent. Sudden changes in mowing height or schedule disrupt the look of the yard. Small, regular steps keep things even.</p>
+<p>Matching care habits to how grass actually grows leads to better results with less effort.</p>
   </main>
 
   <footer class="site-footer">
@@ -113,12 +76,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
